# generic

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Sconstruct  test.cpp
.github/agents/: my-agent.md
.github/workflows/: doc-agent.yml  linux.yml  promote.yml  test.yml  update-docs.yml
boolean/: Expression.hpp
circuit/: MNA.hpp  MOR.hpp  Simulator.hpp
common/: Archive.hpp  Exception.hpp  Macros.hpp  System.hpp  Traits.hpp  Version.hpp
geometry/: BooleanOperation.hpp  BoostGeometryRegister.hpp  BoostPolygonRegister.hpp  Box.hpp  Clipper.hpp  Common.hpp  Connectivity.hpp  Curves.hpp  Geometries.hpp  GeometryIO.hpp  GeometryTraits.hpp  HashFunction.hpp  Line.hpp  Mesh2D.hpp  OccupancyGridMap.hpp  Plane.hpp  Point.hpp  Polygon.hpp  PolygonMerge.hpp  PolygonWithHoles.hpp  Predicates.hpp  Rasterization.hpp  Segment.hpp  Serialization.hpp  Sphere.hpp  Tetrahedralization.hpp  TetrahedralizationIO.hpp  Topology.hpp  Transform.hpp  Trapezoid.hpp  Triangle.hpp  TriangleEvaluator.hpp  Triangulation.hpp  TriangulationOperator.hpp  TriangulationRefinement.hpp  Triangulator.hpp  Utility.hpp  Utility.ipp  Vector.hpp
geometry/concept/: GeometryTraits.hpp
geometry/model/: Line.hpp  Mesh2D.hpp  Polygon.hpp  Sphere.hpp  Tetrahedralization.hpp  Trapezoid.hpp  Triangle.hpp  Triangulation.hpp  Vector.hpp
graph/model/: DirectedGraph.hpp
graph/traits/: BoostGraphTraits.hpp
graph/utils/: Index.hpp  LinearMap.hpp
image/: QRCode.hpp
math/: FastMath.hpp  Filter.hpp  Interpolation.hpp  LinearAlgebra.hpp  LookupTable.hpp  MathIO.hpp  MathUtility.hpp  Numbers.hpp  PolynomialFit.hpp
math/la/: Common.hpp
scripts/: update_docs.py
src/boolean/: Operation.hpp
src/common/: Exception.hpp  Macros.hpp
src/geometry/: BooleanOperation.hpp  Common.hpp  Segment.hpp  TetrahedralizationIO.hpp  Topology.hpp  Transform.hpp  Triangle.hpp  TriangleEvaluator.hpp  Triangulation.hpp  TriangulationRefinement.hpp  Utility.hpp  Utility.ipp
src/graph/model/: DirectedGraph.hpp
src/math/: Filter.hpp  MathUtility.hpp  Numbers.hpp  PolynomialFit.hpp
src/thread/: LockFreeBitSet.hpp  LockFreeHashMap.hpp  MapReduce.hpp
src/tools/: Color.hpp  Format.hpp  Log.hpp  Tools.hpp  Units.hpp
src/tree/: QuadTree.hpp
src/utils/: Index.hpp  Version.hpp
test/: CMakeLists.txt  SConscript  Sconstruct  TestBoolean.hpp  TestCircuit.hpp  TestCommon.hpp  TestGeometry.hpp  TestGraph.hpp  TestImage.hpp  TestMath.hpp  TestThread.hpp  TestTools.hpp  TestTopology.hpp  TestTree.hpp  TestUtils.hpp  UnitTest.cpp  test.cpp
test/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  placeholder.txt
test/data/in/: connectivity.txt
test/utils/: vtkViewer.py
thread/: LockFreeBitSet.hpp  LockFreeHashMap.hpp  MapReduce.hpp  TaskFlow.hpp  ThreadPool.hpp  ThreadSafeContainer.hpp  Utility.hpp
tools/: Color.hpp  FileSystem.hpp  Format.hpp  Hash.hpp  ImgIO.hpp  Log.hpp  Parser.hpp  ProgramOptions.hpp  StringHelper.hpp  Tools.hpp  Units.hpp  doc-updater.py
topology/: Common.hpp  IndexGraph.hpp
tree/: BVH.hpp  BVHUtilityMT.hpp  Builder.hpp  BuilderMT.hpp  IO.hpp  KdTree.hpp  KdTreeUtilityMT.hpp  QuadTree.hpp  QuadTreeUtilityMT.hpp  RBT.hpp  RandomTree.hpp  RectTree.hpp  Varification.hpp
utils/: Index.hpp  LinearMap.hpp  Version.hpp  ZipView.hpp
